-
Bug
-
Resolution: Done
-
P1: Critical
-
5.11.1
-
None
-
b7a1bcd83a8f68185b617b860cef6f2d2d7c8d9b
When running the example in QTBUG-66666 with Qt 5.10, the output is correct: a single square changing in colour over time. With the 5.11 branch (and dev), the output is incorrect: it shows twice the content that it should when run with a retina display (device pixel ratio is 2). It shouldn't indiscriminately use the device pixel ratio when setting the image, as it breaks the use case of displaying pixel art (by setting smooth to false) with AnimatedSprite. Instead, it should only modify the size/scale of the image if an @2x variant was found.
This is the relevant change: https://codereview.qt-project.org/#/c/227485/
There doesn't appear to be any workaround for this.
| For Gerrit Dashboard: QTBUG-68490 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 231101,6 | Fix subrect of mismatched dpr sprite image | 5.11 | qt/qtdeclarative | Status: MERGED | +2 | 0 |